More basic syntax highlighting

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -10,7 +10,9 @@
   "autoClosingPairs": [
     {"open": "(", "close": ")"},
     {"open": "[", "close": "]"},
-    {"open": "{", "close": "}"}
+    {"open": "{", "close": "}"},
+    {"open": "'", "close": "'", "notIn": ["comment"]},
+    {"open": "\"", "close": "\"", "notIn": ["comment"]},
   ],
   "autoCloseBefore": ";:.,=}])> \n\t",
   "surroundingPairs": [
