--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "module": "commonjs",
     "target": "ES2020",
     "lib": [
-      "ES2020"
+      "ES2020",
+      "DOM"
     ],
     "rootDir": "src",
     "strict": true,
