--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,6 +20,7 @@ on:
     types: [published]
 jobs:
   publish:
+    name: Publish
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -30,7 +31,16 @@ jobs:
           node-version: "14"
       - name: Install dependencies
         run: npm install
+      - name: Build VSIX
+        id: build
+        run: |
+          npx vsce package
+          echo "::set-output name=file::$( jq -r '.name' package.json )-$( jq -r '.version' package.json ).vsix"
+      - name: Upload to GitHub
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ${{ steps.build.outputs.file }}
       - name: Publish
-        run: npx vsce publish
+        run: npx vsce publish --packagePath ${{ steps.build.outputs.file }}
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
